wip: improved clearing of notebook

--- a/08-apprendimento-non-supervisionato-clustering/58.3-clustering-gerarchico-ottimizzato.ipynb
+++ b/08-apprendimento-non-supervisionato-clustering/58.3-clustering-gerarchico-ottimizzato.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e69c1820",
    "metadata": {},
    "outputs": [],
@@ -571,11 +571,13 @@
     "  if verbose:\n",
     "    print(f'hom: {hom}, comp: {comp}, v: {v}')\n",
     "    \n",
+    "    print('clusterizzazione calcolata')\n",
     "    plt.figure(figsize=(12,6))\n",
     "    plt.scatter(X[:,0], X[:,1], c=y, s=10, cmap=\"viridis\")\n",
     "    plt.scatter(centroids.iloc[:, 0], centroids.iloc[:, 1], c='red', marker='o', s=100, label='Centroidi stimati')\n",
     "    plt.show()\n",
     "    \n",
+    "    print('clusterizzazione reale')\n",
     "    plt.figure(figsize=(12,6))\n",
     "    plt.scatter(X[:,0], X[:,1], c=true_lables, s=10, cmap=\"viridis\")\n",
     "    plt.show()\n",
