--- a/08-apprendimento-non-supervisionato-clustering/58.3-clustering-gerarchico-ottimizzato.ipynb
+++ b/08-apprendimento-non-supervisionato-clustering/58.3-clustering-gerarchico-ottimizzato.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9565296",
+   "metadata": {},
+   "source": [
+    "inizialmente creo una funzione per generare in maniera randomica un dataset clusterizzato con un numero di cluster tra 50 e 200 contenente tra 4000 e 8000 esempi con una deviazione standard che può andare tra 0.3 e 0.8 tramite make_blobs in modo che il dataset sia replicabile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1ed8cf8c",
@@ -30,6 +38,14 @@
     "  n_samples = random.randint(4000, 8000)\n",
     "  cluster_std = random.uniform(0.3, 0.8)\n",
     "  return make_blobs(n_samples=n_samples, centers=n_cluster, cluster_std=cluster_std, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b7d7cae",
+   "metadata": {},
+   "source": [
+    "nella funzione sottostante do la possibilità di mostrare il threshold"
    ]
   },
   {
@@ -49,25 +65,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ab09e7ad",
+   "cell_type": "markdown",
+   "id": "b49c080f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def findThreshold(link_matrix, verbose=True):\n",
-    "  old_nr = [-1,-1]\n",
-    "  for i in range(1,50):\n",
-    "    clusters = fcluster(link_matrix, t=i, criterion='distance')\n",
-    "    n_cluster = len(set(clusters))\n",
-    "    \n",
-    "    if(n_cluster == old_nr[0] and n_cluster == old_nr[1]):\n",
-    "      if(verbose):\n",
-    "        showThreshold(i, link_matrix)\n",
-    "      return [i, n_cluster]\n",
-    "    \n",
-    "    old_nr = [old_nr[1], n_cluster]\n",
-    "  return [-1, 0]"
+    "Questa funzione permetterà di calcolare gli iperparametri in modo automatico basandosi sulla siluette della link matrix e dei punti"
    ]
   },
   {
@@ -91,6 +93,14 @@
     "    max_t = 80 if gap_ratio > 1.5 else 40\n",
     "\n",
     "    return [step, max_t, sample_frac]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "937ac205",
+   "metadata": {},
+   "source": [
+    "in questa funzione trovo il threshold vero e proprio"
    ]
   },
   {
@@ -132,6 +142,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07f0948a",
+   "metadata": {},
+   "source": [
+    "In questa funzione stimo i centroidi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "fea07711",
@@ -151,6 +169,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fae21b4",
+   "metadata": {},
+   "source": [
+    "in questa calcolo gli score di omogeneità, completezza e v_mesure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "7693aafe",
@@ -162,6 +188,14 @@
     "  comp = completeness_score(true_labels, predicted_labels)\n",
     "  v = v_measure_score(true_labels, predicted_labels)\n",
     "  return [hom, comp, v]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df9deaa",
+   "metadata": {},
+   "source": [
+    "genero un random blob con seme a 12"
    ]
   },
   {
@@ -193,147 +227,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f8b8de3e",
+   "cell_type": "markdown",
+   "id": "eeede2bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>263.0</td>\n",
-       "      <td>4144.0</td>\n",
-       "      <td>0.002279</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>370.0</td>\n",
-       "      <td>4388.0</td>\n",
-       "      <td>0.004539</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>128.0</td>\n",
-       "      <td>394.0</td>\n",
-       "      <td>0.005605</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>355.0</td>\n",
-       "      <td>4526.0</td>\n",
-       "      <td>0.007176</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1658.0</td>\n",
-       "      <td>2854.0</td>\n",
-       "      <td>0.008173</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5095</th>\n",
-       "      <td>10189.0</td>\n",
-       "      <td>10193.0</td>\n",
-       "      <td>154.557087</td>\n",
-       "      <td>1276.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5096</th>\n",
-       "      <td>10190.0</td>\n",
-       "      <td>10192.0</td>\n",
-       "      <td>167.476259</td>\n",
-       "      <td>1547.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5097</th>\n",
-       "      <td>10194.0</td>\n",
-       "      <td>10195.0</td>\n",
-       "      <td>325.586201</td>\n",
-       "      <td>2278.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5098</th>\n",
-       "      <td>10196.0</td>\n",
-       "      <td>10197.0</td>\n",
-       "      <td>416.513827</td>\n",
-       "      <td>2823.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5099</th>\n",
-       "      <td>10198.0</td>\n",
-       "      <td>10199.0</td>\n",
-       "      <td>501.440726</td>\n",
-       "      <td>5101.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5100 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            0        1           2       3\n",
-       "0       263.0   4144.0    0.002279     2.0\n",
-       "1       370.0   4388.0    0.004539     2.0\n",
-       "2       128.0    394.0    0.005605     2.0\n",
-       "3       355.0   4526.0    0.007176     2.0\n",
-       "4      1658.0   2854.0    0.008173     2.0\n",
-       "...       ...      ...         ...     ...\n",
-       "5095  10189.0  10193.0  154.557087  1276.0\n",
-       "5096  10190.0  10192.0  167.476259  1547.0\n",
-       "5097  10194.0  10195.0  325.586201  2278.0\n",
-       "5098  10196.0  10197.0  416.513827  2823.0\n",
-       "5099  10198.0  10199.0  501.440726  5101.0\n",
-       "\n",
-       "[5100 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "dfLinkMatrix = pd.DataFrame(link_matrix)\n",
-    "\n",
-    "dfLinkMatrix"
+    "salvo la matrice in un csv esterno per eventuali analisi future"
    ]
   },
   {
@@ -351,7 +249,7 @@
    "id": "4e8803df",
    "metadata": {},
    "source": [
-    "trovo il threshold"
+    "trovo il threshold, il numero di cluster e il miglior punteggio di sulhette, utilizzando iperparametri calcolati automaticamente"
    ]
   },
   {
@@ -375,44 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "59cf2adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.36742371211299824)"
+       "(29, 26, np.float64(0.36742371211299824))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "d8988fc6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(35, 23)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "threshold, value"
+    "threshold, value, best_score"
    ]
   },
   {
@@ -441,10 +318,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "020c1de5",
+   "id": "84ab8105",
    "metadata": {},
    "source": [
-    "stimo i centroidi"
+    "In questo esempio abbiamo 171 clusters, ma il mio algoritmo ne trova solo 26, apparentemente può sembrare sbagliato, ma andiamo avanti, calcoliamo i centroidi e verifichiamo graficamente se l'occhio umano avrebbe potuto far meglio"
    ]
   },
   {
@@ -462,7 +339,7 @@
    "id": "2b74c579",
    "metadata": {},
    "source": [
-    "visualizzo il risultato"
+    "Visualizziamo la cluterizzazione proposta dall'algoritmo e calcoliamone i parametri"
    ]
   },
   {
@@ -507,7 +384,7 @@
    "id": "38bd96d6",
    "metadata": {},
    "source": [
-    "ora proviamo l'algoritmo per diversi casi"
+    "Vediamo il caso reale"
    ]
   },
   {
@@ -549,8 +426,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a27141a",
+   "metadata": {},
+   "source": [
+    "Direi che l'occhio umano non avrebbe potuto fare meglio dell'algoritmo in questo caso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd20e3a5",
+   "metadata": {},
+   "source": [
+    "ora automatizziamo la generazione di esempi, rendendo ogni esempio replicabile tramite il random_seed, ma allo stesso tempo cercando di creare esempi complessi e non prevedibili"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "e69c1820",
    "metadata": {},
    "outputs": [],
@@ -585,6 +478,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13150db9",
+   "metadata": {},
+   "source": [
+    "proviamo gli esempi per vari semi tra 1 e 20"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "f0e2ecd3",
@@ -594,6 +495,14 @@
     "results_df = pd.DataFrame(columns=[\"run\", \"hom\", \"comp\", \"v\", \"threshold\", \"n_clusters\"])\n",
     "for random_seed in range(1,21):\n",
     "  results_df.loc[len(results_df)] = createExample(random_seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f563ec7f",
+   "metadata": {},
+   "source": [
+    "visualizziamo i risultati"
    ]
   },
   {
@@ -850,6 +759,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91089551",
+   "metadata": {},
+   "source": [
+    "i valori medi su omogeneità, completezza e v_measure sembrano accettabili per casi complessi\n",
+    "hom     0.636166\n",
+    "comp    0.930699\n",
+    "v       0.753982"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "46bc2b08",
@@ -871,6 +791,14 @@
    ],
    "source": [
     "results_df[['hom', 'comp', 'v']].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5400b0be",
+   "metadata": {},
+   "source": [
+    "recuperiamo il caso peggiore per ogni parametro"
    ]
   },
   {
@@ -902,7 +830,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
+   "id": "d94da3f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run           17.000000\n",
+       "hom            0.534153\n",
+       "comp           0.886370\n",
+       "v              0.666595\n",
+       "threshold     35.000000\n",
+       "n_clusters    25.000000\n",
+       "Name: 16, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.loc[results_df['comp'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8e765c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run           17.000000\n",
+       "hom            0.534153\n",
+       "comp           0.886370\n",
+       "v              0.666595\n",
+       "threshold     35.000000\n",
+       "n_clusters    25.000000\n",
+       "Name: 16, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.loc[results_df['v'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b9d6968",
+   "metadata": {},
+   "source": [
+    "sembra essere quello con seme = 17, ricostruiamolo in modalità verbosa e vediamone la complessità. (la prima immagine è la clusterizzazione calcolata dall'algoritmo, la seconda è la clusterizzazione reale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "08283de1",
    "metadata": {},
    "outputs": [
@@ -910,7 +900,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hom: 0.5341525823442262, comp: 0.8863698567470168, v: 0.6665952397012292\n"
+      "hom: 0.5341525823442262, comp: 0.8863698567470168, v: 0.6665952397012292\n",
+      "clusterizzazione calcolata\n"
      ]
     },
     {
@@ -922,6 +913,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clusterizzazione reale\n"
+     ]
     },
     {
      "data": {
@@ -944,7 +942,7 @@
        " 25]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,57 +952,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "8a79fffe",
+   "cell_type": "markdown",
+   "id": "dee51e21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "run           17.000000\n",
-       "hom            0.534153\n",
-       "comp           0.886370\n",
-       "v              0.666595\n",
-       "threshold     35.000000\n",
-       "n_clusters    25.000000\n",
-       "Name: 16, dtype: float64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "results_df.loc[results_df['comp'].idxmin()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "5bb306a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "run           17.000000\n",
-       "hom            0.534153\n",
-       "comp           0.886370\n",
-       "v              0.666595\n",
-       "threshold     35.000000\n",
-       "n_clusters    25.000000\n",
-       "Name: 16, dtype: float64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_df.loc[results_df['v'].idxmin()]"
+    "direi che individuare questa clusterizzazione era un compito estremamente complesso e difficilmente l'occhio umano avrebbe potuto far di meglio.\n",
+    "Mi ritengo soddisfatto del risultato"
    ]
   }
  ],
