fix: improved dbscan

--- a/08-apprendimento-non-supervisionato-clustering/60-dbscan.ipynb
+++ b/08-apprendimento-non-supervisionato-clustering/60-dbscan.ipynb
@@ -694,6 +694,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ca9422f",
+   "metadata": {},
+   "source": [
+    "recupero i dati relativi all'esempio con random seed 11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "id": "47b9f65e",
@@ -830,13 +838,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 229,
+   "id": "2d6bdb99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10    [[0.20316613551684803, -0.0716854658732407], [...\n",
+       "Name: X, dtype: object"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
    "id": "b59b30dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_11_np = np.array(X_11)[0]\n",
-    "#TODO: migliorare"
+    "X_11_np = np.array(X_11)[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "a01b8a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.20316614, -0.07168547],\n",
+       "       [ 1.71409515, -0.31499632],\n",
+       "       [-0.31613954,  1.11390455],\n",
+       "       [ 1.0876193 , -0.47086808],\n",
+       "       [ 1.29218345, -0.82934093],\n",
+       "       [ 0.91531569, -0.38185388],\n",
+       "       [-0.26770719,  0.86093857],\n",
+       "       [ 0.75291984,  0.62882352],\n",
+       "       [ 1.43974977, -0.30148065],\n",
+       "       [ 1.00728627,  0.11344248],\n",
+       "       [-1.08127651, -0.01999578],\n",
+       "       [-0.9545811 ,  0.59110234],\n",
+       "       [-0.80894355, -0.06091383],\n",
+       "       [ 0.78397586, -0.57604292],\n",
+       "       [ 0.73280917,  0.73779923],\n",
+       "       [ 0.46662026, -0.43216481],\n",
+       "       [ 1.22135234,  0.52476123],\n",
+       "       [ 1.26798483, -0.27254142],\n",
+       "       [ 1.03495356,  0.49258826],\n",
+       "       [ 0.67826494,  0.89251836],\n",
+       "       [-0.06527784,  0.00749574],\n",
+       "       [ 1.115896  , -0.10990557],\n",
+       "       [ 1.12465307, -0.06613834],\n",
+       "       [ 0.36558405,  1.09517414],\n",
+       "       [ 2.0325781 ,  0.09382339],\n",
+       "       [-0.04381954,  0.94497124],\n",
+       "       [-1.08832616,  0.13493892],\n",
+       "       [-0.18568647,  0.41032428],\n",
+       "       [ 1.46042121, -0.54263866],\n",
+       "       [ 1.85472166,  0.45400065],\n",
+       "       [ 0.43663732, -0.45281853],\n",
+       "       [-1.20475655, -0.13907836],\n",
+       "       [ 1.16376078, -0.51709508],\n",
+       "       [ 0.33887106,  0.69437056],\n",
+       "       [ 1.62134684,  0.35323433],\n",
+       "       [ 1.84070249,  0.09233011],\n",
+       "       [ 0.41858946,  0.91250989],\n",
+       "       [ 0.51707032,  0.44225578],\n",
+       "       [ 0.88342743,  0.60807136],\n",
+       "       [ 0.90207312,  0.26953456],\n",
+       "       [-0.05658805,  1.29357513],\n",
+       "       [-0.21113435,  1.24305287],\n",
+       "       [-0.82659246,  0.12125466],\n",
+       "       [ 1.00805384, -0.63398803],\n",
+       "       [ 0.9227804 , -0.47007794],\n",
+       "       [ 0.24114756, -0.34813669],\n",
+       "       [ 1.97980241, -0.20920605],\n",
+       "       [ 0.04665171,  0.92785135],\n",
+       "       [ 0.77582908,  1.26039912],\n",
+       "       [ 1.1492748 , -0.5802291 ],\n",
+       "       [-0.08580521,  0.37356087],\n",
+       "       [ 1.14781421,  0.44684961],\n",
+       "       [-0.33018563,  1.1278205 ],\n",
+       "       [-0.81913572, -0.26134672],\n",
+       "       [ 1.29104338, -0.58707678],\n",
+       "       [-0.22650473,  1.0588176 ],\n",
+       "       [ 0.09209514,  1.1014867 ],\n",
+       "       [ 1.31944161, -0.68608199],\n",
+       "       [-0.01234549,  0.81962412],\n",
+       "       [-0.80452337,  0.22718881],\n",
+       "       [ 1.48758198, -0.10783736],\n",
+       "       [-1.02588476,  0.35761631],\n",
+       "       [ 0.59396823, -0.41763625],\n",
+       "       [ 1.86010405, -0.35678758],\n",
+       "       [ 1.14615429, -0.10640705],\n",
+       "       [-0.80316006,  0.61791086],\n",
+       "       [-0.5627973 ,  0.77007665],\n",
+       "       [-0.78187972,  0.62342075],\n",
+       "       [ 2.15465667,  0.44558175],\n",
+       "       [ 0.48276174,  0.96455507],\n",
+       "       [ 1.18361892,  0.2024641 ],\n",
+       "       [-0.74633941,  0.92555722],\n",
+       "       [ 0.60509843, -0.58601241],\n",
+       "       [-0.1453458 ,  0.3299997 ],\n",
+       "       [ 0.55046007, -0.26177145],\n",
+       "       [-0.31475756,  0.90557342],\n",
+       "       [ 0.25746311, -0.28959527],\n",
+       "       [ 0.34365334,  1.00439914],\n",
+       "       [ 1.64005759, -0.48073581],\n",
+       "       [ 1.59295059,  0.05386065],\n",
+       "       [-0.02491079, -0.04750743],\n",
+       "       [-0.73496805,  0.60948226],\n",
+       "       [ 0.72696936, -0.26781471],\n",
+       "       [ 1.29241463, -0.76605419],\n",
+       "       [ 0.04811109,  0.28107808],\n",
+       "       [ 0.79936929,  0.39804451],\n",
+       "       [ 1.5987941 , -0.35789544],\n",
+       "       [ 1.65801829,  0.10116425],\n",
+       "       [ 2.07801527,  0.12776383],\n",
+       "       [ 0.19392714,  0.88755315],\n",
+       "       [-0.70191406,  0.74425187],\n",
+       "       [ 0.75428245,  0.33544254],\n",
+       "       [-0.75603115,  0.54290008],\n",
+       "       [ 0.15684903, -0.03305488],\n",
+       "       [ 0.57603241, -0.52859876],\n",
+       "       [-0.899441  ,  0.47261842],\n",
+       "       [ 1.80929977, -0.04378858],\n",
+       "       [ 1.98262266,  0.41983929],\n",
+       "       [ 0.97576658,  0.31519786],\n",
+       "       [ 0.01039277, -0.33713932],\n",
+       "       [ 0.26483748, -0.24084971],\n",
+       "       [ 0.19584002,  0.19468485],\n",
+       "       [ 0.39742072, -0.0032062 ],\n",
+       "       [-0.35646267,  0.95900655],\n",
+       "       [ 1.01019644,  0.25857046],\n",
+       "       [ 0.106524  ,  0.03364489],\n",
+       "       [ 1.86105393, -0.07461897],\n",
+       "       [ 1.97172609,  0.01876031],\n",
+       "       [ 0.79974323,  0.5667278 ],\n",
+       "       [ 0.70267692,  0.35935832],\n",
+       "       [ 0.44385021,  1.10475898],\n",
+       "       [ 0.5302097 , -0.22230483],\n",
+       "       [ 1.6950461 , -0.248638  ],\n",
+       "       [ 0.15711431, -0.09039697],\n",
+       "       [-0.08521572,  1.03531208],\n",
+       "       [ 1.89583694, -0.32048415],\n",
+       "       [ 0.14819531,  0.56937464],\n",
+       "       [ 0.88284121, -0.40670858],\n",
+       "       [-0.73225111, -0.41068774],\n",
+       "       [ 0.42053634,  0.53744493],\n",
+       "       [ 0.47128527, -0.54272935],\n",
+       "       [-0.75091998,  0.96519672],\n",
+       "       [ 1.04952217, -0.57360922],\n",
+       "       [-0.48543865,  1.2427567 ],\n",
+       "       [-0.05295683,  1.021492  ],\n",
+       "       [ 2.20992779,  0.5320679 ],\n",
+       "       [ 0.76229538,  0.78028301],\n",
+       "       [ 0.93611316,  0.21861965],\n",
+       "       [-1.2115353 ,  0.0545069 ],\n",
+       "       [ 1.19649593, -0.50931341],\n",
+       "       [ 0.52796026,  0.58817721],\n",
+       "       [ 0.03183698,  0.20055046],\n",
+       "       [ 0.18318839, -0.19826814],\n",
+       "       [ 1.93751334,  0.03697669],\n",
+       "       [ 0.24692981,  0.87046746],\n",
+       "       [ 1.79463925, -0.2601208 ],\n",
+       "       [ 2.0674962 ,  0.10733773],\n",
+       "       [ 0.00540052,  1.08594796],\n",
+       "       [-0.76648428,  0.52506532],\n",
+       "       [ 0.69839937, -0.48216159],\n",
+       "       [ 1.74668202,  0.11478204],\n",
+       "       [-0.58604043,  0.60634688],\n",
+       "       [ 0.11430738,  0.01099515],\n",
+       "       [-1.0989433 ,  0.15005394],\n",
+       "       [ 1.72773233, -0.36270534],\n",
+       "       [ 0.89570326,  0.35881622],\n",
+       "       [ 0.00690826,  0.50995149],\n",
+       "       [-0.51242156,  0.40809097],\n",
+       "       [ 0.08109876,  1.08161383],\n",
+       "       [ 1.19520973, -0.42019557],\n",
+       "       [ 0.11151451,  1.16783999],\n",
+       "       [ 1.0223001 ,  0.26803971],\n",
+       "       [ 0.22983302,  0.99799612],\n",
+       "       [ 0.82420811,  0.2608125 ],\n",
+       "       [-1.13019843,  0.27186083],\n",
+       "       [-0.09873431, -0.0226496 ],\n",
+       "       [ 1.99452453,  0.56346516],\n",
+       "       [ 0.56378618,  0.48624189],\n",
+       "       [-0.77915083,  0.60456779],\n",
+       "       [ 1.9260762 ,  0.15254284],\n",
+       "       [-0.28795289,  1.21533429],\n",
+       "       [-0.49207011,  0.95248536],\n",
+       "       [ 0.58550672, -0.34774381],\n",
+       "       [ 0.09388164,  0.14394194],\n",
+       "       [ 1.17593224,  0.02044933],\n",
+       "       [ 1.55098919,  0.31628382],\n",
+       "       [ 0.29908329, -0.38284355],\n",
+       "       [ 1.34348533, -0.84575438],\n",
+       "       [ 1.08693674, -0.2690069 ],\n",
+       "       [ 1.32068231, -0.22944642],\n",
+       "       [ 1.1464099 ,  0.18146869],\n",
+       "       [ 0.34849585, -0.12341821],\n",
+       "       [ 0.38694943,  0.69900122],\n",
+       "       [ 0.75003164,  0.71476671],\n",
+       "       [ 0.46704322, -0.32869523],\n",
+       "       [ 0.12164156,  0.39284609],\n",
+       "       [-0.92123541,  0.53623414],\n",
+       "       [ 1.96349162, -0.33332457],\n",
+       "       [ 0.68165918, -0.52230451],\n",
+       "       [ 0.762869  ,  0.90331023],\n",
+       "       [-1.27848288,  0.32412788],\n",
+       "       [-0.76625041,  0.78127131],\n",
+       "       [ 2.0687744 , -0.02304504],\n",
+       "       [ 0.19313181,  0.32767822],\n",
+       "       [ 1.15913562, -0.55347761],\n",
+       "       [-0.47126008,  0.90277636],\n",
+       "       [-0.34062165,  0.96388667],\n",
+       "       [ 0.58631356, -0.2939984 ],\n",
+       "       [ 0.49445293, -0.49505875],\n",
+       "       [ 1.92163777,  0.43974287],\n",
+       "       [ 1.8259916 ,  0.12439801],\n",
+       "       [ 0.25255698,  0.70149019],\n",
+       "       [-0.44055565,  0.87417033],\n",
+       "       [ 0.41246777, -0.11392339],\n",
+       "       [ 0.44833825, -0.79626631],\n",
+       "       [ 0.35747909,  0.74177581],\n",
+       "       [ 0.29812362, -0.01491453],\n",
+       "       [ 0.18602477, -0.3010283 ],\n",
+       "       [ 0.15470281,  0.95555023],\n",
+       "       [ 1.11523255, -0.43041662],\n",
+       "       [ 1.25691186, -0.34185333],\n",
+       "       [-1.14843994,  0.33975364],\n",
+       "       [-0.09032099,  0.29381337],\n",
+       "       [ 0.71936554,  0.59959121],\n",
+       "       [-0.95400886,  0.95614277],\n",
+       "       [-0.32528507,  0.89361154],\n",
+       "       [ 0.84512951, -0.64154913],\n",
+       "       [-0.66702155,  0.87935506],\n",
+       "       [ 0.70560146,  0.46347106],\n",
+       "       [ 1.806405  , -0.40101679],\n",
+       "       [-0.45665948,  0.58354971],\n",
+       "       [-1.01980215,  0.36087057],\n",
+       "       [-0.70422161,  0.48488287],\n",
+       "       [ 1.76980605,  0.21676778],\n",
+       "       [ 0.77200707, -0.06330317]])"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_11_np"
    ]
   },
   {
@@ -1136,6 +1400,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "954fa425",
+   "metadata": {},
+   "source": [
+    "visualizzo la forma dell'11° dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "id": "a1802bb7",
@@ -1171,7 +1443,7 @@
    "id": "4dd331d4",
    "metadata": {},
    "source": [
-    "da questo ciclo è possibile vedere un clustering migliore per persilon = 0.3 e min_samples=12, si potrebbe prendere come base e si potrebbe fare uno studio per capire come migliorare ulteriormente gli iperparametri"
+    "testo vari valori di epsilon e esempi e mi accorgo che i risultati migliori sono per epsilon = 0.3 e min_samples = 12"
    ]
   },
   {
@@ -1781,6 +2053,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "c22a9e2e",
+   "metadata": {},
+   "source": [
+    "faccio ulteriori test manuali per verificare se sia possibile migliorare la situazione\n",
+    "identifico epsilon a 0.31 e min_samples = 13 come iperparametri che restituiscono un risultato accettabile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c7f7e51f",
@@ -1802,14 +2083,6 @@
     "y_pred_11 = dbscan_11.fit_predict(X_11_np)\n",
     "plt.scatter(X_11_np[:,0], X_11_np[:,1], c=y_pred_11)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f72ac574",
-   "metadata": {},
-   "source": [
-    "una soluzione potrebbe essere quella di considerare gli iperparametri epsilon a 0.31 e 13 esempi"
    ]
   }
  ],
